<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/car_status"
        android:title="@string/follow_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/car_control"
        android:title="@string/follow_control"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_coded_disc"
        android:title="@string/clear_coded_disc"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_ConnectTransport_mark"
        android:title="@string/set_ConnectTransport_mark"
        app:showAsAction="never" />
    <item
        android:id="@+id/Android_Control"
        android:title="@string/auto_Android_control"
        app:showAsAction="never" />

    <item
        android:id="@+id/half_Control"
        android:icon="@drawable/half_control"
        android:title="@string/auto_half_control"
        app:showAsAction="ifRoom" />
</menu>