<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_module"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragmentUI.ModuleFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1">

            <Button
                android:id="@+id/clean_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean_module_info_area"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/traffic_light_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trafficLight_detect"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/plate_ocr_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate_detect_by_color"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/shape_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shape_detect"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/traffic_sign_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trafficSign_detect"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/VID_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate_detect_by_VID"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/QR_mod_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QR_detect"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/dev_method_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testing_method"
                tools:ignore="TextContrastCheck" />
        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/module_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/bg_select_all"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/scrollView"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/module_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_select_all"
        android:contentDescription="@string/what_your_detect"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/module_info"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/module_info"
        app:layout_constraintWidth_percent="0.375"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/how_detect_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="true"
        android:layoutDirection="rtl"
        android:text="@string/default_detect"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintEnd_toEndOf="@+id/module_img"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/module_img"
        app:layout_constraintTop_toBottomOf="@+id/module_img"
        app:switchPadding="15dp"
        app:track="@drawable/switch_track_selector" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/get_img_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="false"
        android:layoutDirection="rtl"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintEnd_toEndOf="@+id/how_detect_btn"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/how_detect_btn"
        app:layout_constraintTop_toBottomOf="@+id/how_detect_btn"
        app:switchPadding="15dp"
        app:track="@drawable/switch_track_selector" />

    <Button
        android:id="@+id/choose_detectPic_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/choose_detect_pic"
        app:layout_constraintEnd_toEndOf="@+id/get_img_btn"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/get_img_btn"
        app:layout_constraintTop_toBottomOf="@+id/get_img_btn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cutter_bitmap_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@+id/choose_detectPic_btn"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/choose_detectPic_btn"
        app:layout_constraintTop_toBottomOf="@+id/choose_detectPic_btn"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>