<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragmentUI.AnalyseFragment">

    <ListView
        android:id="@+id/lv_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_select_all"
        android:contentDescription="@string/choose_img"
        android:padding="5dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toEndOf="@+id/lv_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toEndOf="@+id/lv_list"
        app:layout_constraintTop_toBottomOf="@+id/img_show"
        app:layout_constraintWidth_percent="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_control1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/get_hsv_mat_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/analyse_HSV"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/choose_morphologyEx_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/choose_morphologyEx"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/morphologyEx_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="12sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/morphologyEx_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layoutDirection="rtl"
                    android:padding="5sp"
                    android:textSize="12sp"
                    android:thumb="@drawable/switch_thumb"
                    app:switchPadding="15dp"
                    app:track="@drawable/switch_track_selector" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_control2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintTop_toBottomOf="@+id/ll_control1">

                <Button
                    android:id="@+id/TFTAutoCutter_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TFT_auto_cutter"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/restore_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset_HSV"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/import_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/import_HSV"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/export_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export_HSV"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_control3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintTop_toBottomOf="@+id/ll_control2">

                <Button
                    android:id="@+id/get_shape_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="获取图形面积(TODO)"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/get_edgeLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="获取图形边长(TODO)"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/get_edgeLengths_angle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="获取两边夹角(TODO)"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/test_method"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="测试方法"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_hsvmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Hmin" />

        <SeekBar
            android:id="@+id/sb_h_min"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="180"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/HMin_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:wheel_itemTextColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hmax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@id/ll_hsvmin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hmax" />

        <SeekBar
            android:id="@+id/sb_h_max"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="180"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/HMax_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_smin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@id/ll_hmax">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/smin" />

        <SeekBar
            android:id="@+id/sb_s_min"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="255"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/SMin_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_smax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@id/ll_smin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/smax" />

        <SeekBar
            android:id="@+id/sb_s_max"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="255"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/SMax_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_vmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@id/ll_smax">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vmin" />

        <SeekBar
            android:id="@+id/sb_v_min"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="255"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/VMin_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_vmax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_show"
        app:layout_constraintTop_toBottomOf="@id/ll_vmin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vmax" />

        <SeekBar
            android:id="@+id/sb_v_max"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:max="255"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <com.github.gzuliyujiang.wheelview.widget.NumberWheelView
            android:id="@+id/VMax_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>